# vgmtrans

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt
.github/workflows/: build.yml
build-aux/flatpak/: io.github.vgmtrans.vgmtrans.yaml
cmake/: VGMTransWarnings.cmake
cmake/toolchain/: Linux-x64.cmake  Windows-ARM64.cmake  Windows-x64.cmake  macOS-AppleSilicon.cmake  macOS-Intel.cmake
src/main/: CMakeLists.txt  LogManager.h  Loop.h  Options.h  Root.cpp  Root.h
src/main/components/: FileLoader.cpp  FileLoader.h  PSFFile.cpp  PSFFile.h  Scanner.h  VGMColl.cpp  VGMColl.h  VGMFile.cpp  VGMFile.h  VGMItem.cpp  VGMItem.h  VGMMetadataHint.h  VGMMiscFile.cpp  VGMMiscFile.h  VGMSampColl.cpp  VGMSampColl.h  VGMTag.cpp  VGMTag.h
src/main/conversion/: DLSConversion.cpp  DLSConversion.h  DLSFile.cpp  DLSFile.h  MidiFile.cpp  MidiFile.h  MidiMerge.cpp  RMFConversion.cpp  RMFConversion.h  RiffFile.cpp  RiffFile.h  SF2Conversion.cpp  SF2Conversion.h  SF2File.cpp  SynthFile.cpp  SynthFile.h  VGMExport.cpp  VGMExport.h
src/main/formats/: Format.cpp  Format.h
src/main/io/: RawFile.cpp  RawFile.h
src/main/loaders/: CHDLoader.cpp  CPS3Decrypt.cpp  MAMELoader.cpp  MAMELoader.h  PSF2Loader.cpp  PSFLoader.cpp  PSFMetadataHints.cpp  PSFMetadataHints.h  RSNLoader.cpp  SPC2Loader.cpp  SPCLoader.cpp
src/main/util/: BytePattern.cpp  BytePattern.h  Helper.h
src/ui/cli/: CLIVGMRoot.cpp  CLIVGMRoot.h  main_cli.cpp
src/ui/qt/: CMakeLists.txt  ManualCollectionDialog.cpp  MenuBar.cpp  (+1 more)
src/ui/shell/: CMakeLists.txt  commands.cpp  linenoise.c
(+211 files in other folders)
